<resources>
    <string name="app_name">TODOs</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="add">Add</string>
    <string name="taskDesc">Task Description . . .</string>
    <string name="title_activity_edit_item">Task</string>
    <string name="edit_item_label">Edit Task</string>
    <string name="create_item_label">Create New Task</string>
    <string name="save">   Save   </string>
    <string name="taskComplete">Task Done</string>
    <string name="taskDueDate">Task Due Date</string>
    <string name="deleteTaskMsg">Are you sure to delete Task?</string>
    <string name="deleteTaskTitle">Delete Task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="taskPriority">Priority</string>
    <string-array name="taskPriorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logoAppName">Audi TODOs</string>
</resources>
