<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codepath.todoapp.EditItemActivity"
    tools:showIn="@layout/activity_edit_item">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_item_label"
        android:id="@+id/task_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangeText"
        android:layout_below="@+id/task_label"
        android:layout_alignParentStart="true"
        android:hint="@string/taskDesc"
        android:layout_marginBottom="15dp" />
    <!--        android:inputType="textMultiLine"
            android:ems="10"-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/taskDueDate"
        android:id="@+id/etTaskCompleteDate"
        android:layout_below="@+id/etChangeText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/taskPriority"
        android:id="@+id/tvTakskPriority"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTaskCompleteDate"
        android:layout_marginBottom="15dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spPriority"
        android:layout_below="@+id/etTaskCompleteDate"
        android:layout_toRightOf="@id/tvTakskPriority"
        android:entries="@array/taskPriorities"
        android:spinnerMode="dropdown"
        android:gravity="fill_horizontal"
        android:layout_weight="1"/>

    -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTaskCompleteDate"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/priorityRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskPriority"
            android:id="@+id/tvTakskPriority"
            android:layout_marginRight="4dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spPriority"
            android:entries="@array/taskPriorities"
            android:spinnerMode="dropdown"
            android:layout_weight="1"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskComplete"
        android:id="@+id/cbTaskCompleteStat"
        android:layout_below="@+id/priorityRow"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />
    -->
</RelativeLayout>
